--- a/article.html
+++ b/article.html
@@ -141,18 +141,15 @@
                     <colgroup span="2"></colgroup>
                     <tbody class="thead-dark">
                         <tr>
-                            <td class="align-middle" rowspan="2">Century</td>
-                            <td class="align-middle" rowspan="2">Year</td>
-                            <td class="align-middle" colspan="2">Temperature</td>
-                        </tr>
-                        <tr>
-                            <td class="align-middle">Average</td>
-                            <td class="align-middle">Smoothed</td>
+                            <th class="align-middle" scope="col" rowspan="2">Century</th>
+                            <th class="align-middle" scope="col" rowspan="2">Year</th>
+                            <th class="align-middle" scope="col" colspan="1">Temperature: Average</th>
+                            <th class="align-middle" scope="col" colspan="1">Temperature: Smoothed</th>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="align-middle" rowspan="2">19th century</td>
+                            <td class="align-middle" scope="row" rowspan="2">19th century</td>
                             <td>1880</td>
                             <td>-0.20</td>
                             <td>-0.13</td>
@@ -165,7 +162,7 @@
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="align-middle" rowspan="2">20th century</td>
+                            <td class="align-middle" scope="row" rowspan="2">20th century</td>
                             <td>1920</td>
                             <td>-0.27</td>
                             <td>-0.26</td>
@@ -178,7 +175,7 @@
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="align-middle" rowspan="2">21st century</td>
+                            <td class="align-middle" scope="row" rowspan="2">21st century</td>
                             <td>2000</td>
                             <td>0.42</td>
                             <td>0.52</td>
