--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="d-flex flex-column bg-light">
-    <div class="container-fluid d-none d-lg-block my-4 header">
+    <header class="container-fluid d-none d-lg-block my-4 header">
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-8 media">
@@ -33,9 +33,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </header>
 
-    <div class="container-fluid bg-dark nav">
+    <nav class="container-fluid bg-dark nav">
         <div class="container">
             <div class="navbar navbar-dark bg-dark navbar-expand-lg px-0">
                 <div class="navbar-brand d-lg-none">
@@ -117,19 +117,19 @@
                 </div>
             </div>
         </div>
-    </div>
+    </nav>
 
-    <div class="container main" id="main">
+    <main class="container main" id="main">
         <div class="row no-gutters">
             <div class="col-12 col-lg-6">
-                <div class="p-4 mt-4 mr-lg-3 bg-white news">
-                    <div class="text-primary mb-4 title">News &amp; events</div>
+                <section class="p-4 mt-4 mr-lg-3 bg-white news">
+                    <h1 class="text-primary mb-4 title">News &amp; events</h1>
                     <div class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/iceberg.jpg">
                         <div class="media-body">
-                            <div class="text-info mt-0 mb-2 subtitle">
+                            <h2 class="text-info mt-0 mb-2 subtitle">
                                 <a href="./article.html">Global temperature record</a>
-                            </div>
+                            </h2>
                             <p>
                                 The global surface temperature relative to 1951-1980 average recently published by NASA shows that 2016 ranks as the warmest
                                 year on record.
@@ -142,9 +142,9 @@
                     <div class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg">
                         <div class="media-body">
-                            <div class="text-info mt-0 mb-2 subtitle">
+                            <h2 class="text-info mt-0 mb-2 subtitle">
                                 <a href="./empty.html?title=Article">At iam decimum annum in spelunca iacet</a>
-                            </div>
+                            </h2>
                             <p>
                                 Immo vero, inquit, ad beatissime vivendum parum est, ad beate vero satis. Claudii libidini, qui tum erat summo ne imperio,
                                 dederetur. Ergo id est convenienter naturae vivere, a natura discedere.
@@ -157,9 +157,9 @@
                     <div class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg">
                         <div class="media-body">
-                            <div class="text-info mt-0 mb-2 subtitle">
+                            <h2 class="text-info mt-0 mb-2 subtitle">
                                 <a href="./empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
-                            </div>
+                            </h2>
                             <p>
                                 Comprehensum, quod cognitum non habet? Quia nec honesto quic quam honestius nec turpi turpius. Maximeque eos videre possumus
                                 res gestas audire et legere velle, qui a spe gerendi absunt confecti senectute. Est enim
@@ -170,11 +170,11 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </section>
             </div>
             <div class="col-12 col-lg-6">
-                <div class="p-4 mt-4 bg-white studies">
-                    <div class="text-primary mb-4 title">Studies</div>
+                <section class="p-4 mt-4 bg-white studies">
+                    <h1 class="text-primary mb-4 title">Studies</h1>
                     <p class="font-weight-bold">Advance your scientific education</p>
                     <div class="list-unstyled ml-3">
                         <p>
@@ -187,10 +187,10 @@
                             <a href="./empty.html?title=Continuing+education">Continuing education programmes</a>
                         </p>
                     </div>
-                </div>
+                </section>
 
-                <div class="p-4 mt-4 bg-white researches">
-                    <div class="text-primary mb-4 title">Researches</div>
+                <section class="p-4 mt-4 bg-white researches">
+                    <h1 class="text-primary mb-4 title">Researches</h1>
                     <p class="font-weight-bold">Join our renowned research groups</p>
                     <p class="ml-3">
                         <a href="./empty.html?title=Doctorate">Doctoral programmes</a>
@@ -214,12 +214,12 @@
                             <a href="./empty.html?title=Article">Atque haec ita iustitiae propria sunt, ut sint virtutum reliquarum communia</a>
                         </p>
                     </div>
-                </div>
+                </section>
             </div>
         </div>
-    </div>
+    </main>
 
-    <div class="container-fluid bg-dark mt-4 footer">
+    <footer class="container-fluid bg-dark mt-4 footer">
         <div class="container text-center py-3">
             <div class="row justify-content-around">
                 <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=About">About</a>
@@ -229,7 +229,7 @@
                 <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Privacy+policy">Privacy policy</a>
             </div>
         </div>
-    </div>
+    </footer>
 
     <script type="text/javascript" src="./js/jquery.js"></script>
     <script type="text/javascript" src="./js/popper.js"></script>
