--- a/article.html
+++ b/article.html
@@ -141,15 +141,18 @@
                     <colgroup span="2"></colgroup>
                     <tbody class="thead-dark">
                         <tr>
-                            <th class="align-middle" scope="col" rowspan="2">Century</th>
-                            <th class="align-middle" scope="col" rowspan="2">Year</th>
-                            <th class="align-middle" scope="col" colspan="1">Temperature: Average</th>
-                            <th class="align-middle" scope="col" colspan="1">Temperature: Smoothed</th>
+                            <th scope="col" class="align-middle" rowspan="2">Century</th>
+                            <th scope="col" class="align-middle" rowspan="2">Year</th>
+                            <th colspan="2" scope="col" class="align-middle" colspan="2">Temperature</th>
+                        </tr>
+                        <tr>
+                            <th scope="col" class="align-middle">Average</th>
+                            <th scope="col"  class="align-middle">Smoothed</th>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="align-middle" scope="row" rowspan="2">19th century</td>
+                            <th scope="row" rowspan="2" class="align-middle" rowspan="2">19th century</th>
                             <td>1880</td>
                             <td>-0.20</td>
                             <td>-0.13</td>
@@ -162,7 +165,7 @@
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="align-middle" scope="row" rowspan="2">20th century</td>
+                            <th scope="row" rowspan="2" class="align-middle" rowspan="2">20th century</th>
                             <td>1920</td>
                             <td>-0.27</td>
                             <td>-0.26</td>
@@ -175,7 +178,7 @@
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="align-middle" scope="row" rowspan="2">21st century</td>
+                            <th  scope="row" rowspan="2" class="align-middle" rowspan="2">21st century</th>
                             <td>2000</td>
                             <td>0.42</td>
                             <td>0.52</td>
@@ -187,6 +190,9 @@
                         </tr>
                     </tbody>
                 </table>
+
+
+
             </div>
         </article>
     </main>
