start adding aria roles (for headings)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="col-8 media">
                     <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg">
                     <div class="media-body align-self-center">
-                        <div class="mb-0 title">Lorem Ipsum
+                        <div   role="heading" class="mb-0 title">Lorem Ipsum
                             <br>Institute of Technology
                         </div>
                     </div>
@@ -41,11 +41,11 @@
                 <div class="navbar-brand d-lg-none">
                     <img class="rounded-right" src="./img/logo.jpg" width="40" height="40">
                 </div>
-                <button class="navbar-toggler" type="button">
+                <button class="navbar-toggler" role="button" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="nav-bar-content">
-                    <div class="navbar-nav mr-auto">
+                    <div class="navbar-nav mr-auto" role="navigation" >
                         <div class="nav-item">
                             <a class="nav-link" href="./">Homepage</a>
                         </div>
@@ -122,12 +122,12 @@
     <main class="container main" id="main">
         <div class="row no-gutters">
             <div class="col-12 col-lg-6">
-                <section class="p-4 mt-4 mr-lg-3 bg-white news">
+                <section role="heading" class="p-4 mt-4 mr-lg-3 bg-white news">
                     <h1 class="text-primary mb-4 title">News &amp; events</h1>
                     <div class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/iceberg.jpg">
                         <div class="media-body">
-                            <h2 class="text-info mt-0 mb-2 subtitle">
+                            <h2 role="heading" class="text-info mt-0 mb-2 subtitle">
                                 <a href="./article.html">Global temperature record</a>
                             </h2>
                             <p>
@@ -141,7 +141,7 @@
                     </div>
                     <div class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg">
-                        <div class="media-body">
+                        <div role="heading" class="media-body">
                             <h2 class="text-info mt-0 mb-2 subtitle">
                                 <a href="./empty.html?title=Article">At iam decimum annum in spelunca iacet</a>
                             </h2>
@@ -156,7 +156,7 @@
                     </div>
                     <div class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg">
-                        <div class="media-body">
+                        <div role="heading" class="media-body">
                             <h2 class="text-info mt-0 mb-2 subtitle">
                                 <a href="./empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
                             </h2>
@@ -173,7 +173,7 @@
                 </section>
             </div>
             <div class="col-12 col-lg-6">
-                <section class="p-4 mt-4 bg-white studies">
+                <section role="heading" class="p-4 mt-4 bg-white studies">
                     <h1 class="text-primary mb-4 title">Studies</h1>
                     <p class="font-weight-bold">Advance your scientific education</p>
                     <div class="list-unstyled ml-3">
@@ -189,7 +189,7 @@
                     </div>
                 </section>
 
-                <section class="p-4 mt-4 bg-white researches">
+                <section role="heading" class="p-4 mt-4 bg-white researches">
                     <h1 class="text-primary mb-4 title">Researches</h1>
                     <p class="font-weight-bold">Join our renowned research groups</p>
                     <p class="ml-3">
@@ -220,8 +220,8 @@
     </main>
 
     <footer class="container-fluid bg-dark mt-4 footer">
-        <div class="container text-center py-3">
-            <div class="row justify-content-around">
+        <div role="a" class="container text-center py-3">
+            <div class="row justify-content-around" role="contentinfo">
                 <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=About">About</a>
                 <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Contact+us">Contact us</a>
                 <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Help">Help</a>
@@ -237,5 +237,4 @@
     <script type="text/javascript" src="./js/common.js"></script>
     <script type="text/javascript" src="./js/index.js"></script>
 </body>
-
 </html>
