--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <img class="my-1 mr-2 rounded-right" src="./img/iceberg.jpg" alt="Iceberg">
                         <section class="media-body" aria-label="Global temperature record">
                             <header>
-                                <h2 class="text-info mt-0 mb-2 subtitle"> Global temperature record</h2>
+                                <a href="./article.html"> <h2 href="./article.html", class="text-info mt-0 mb-2 subtitle"> Global temperature record</h2></a>
                             </header>
                             <p>
                                 The global surface temperature relative to 1951-1980 average recently published by NASA shows that 2016 ranks as the warmest year on record.
@@ -117,7 +117,7 @@
                         <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg" alt="Milky wave">
                         <section role="region" aria-label="At iam decimum annum in spelunca iacet">
                             <header>
-                                <h2 class="text-info mt-0 mb-2 subtitle" href="./empty.html?title=Article">At iam decimum annum in spelunca iacet</h2>
+                                 <a href="./empty.html?title=Article"><h2 class="text-info mt-0 mb-2 subtitle" href="./empty.html?title=Article">At iam decimum annum in spelunca iacet</h2></a>
                             </header>
                             <p>
                                 Immo vero, inquit, ad beatissime vivendum parum est, ad beate vero satis. Claudii libidini, qui tum erat summo ne imperio,
