--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-8 media">
-                    <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg">
+                    <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg" alt="Logo of Lorem Ipsum Institute">
                     <div class="media-body align-self-center">
                         <div   role="heading" class="mb-0 title">Lorem Ipsum
                             <br>Institute of Technology
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="navbar navbar-dark bg-dark navbar-expand-lg px-0">
                 <div class="navbar-brand d-lg-none">
-                    <img class="rounded-right" src="./img/logo.jpg" width="40" height="40">
+                    <img class="rounded-right" src="./img/logo.jpg" width="40" height="40"alt="Logo of Lorem Ipsum Institute">
                 </div>
                 <button class="navbar-toggler" role="button" type="button">
                     <span class="navbar-toggler-icon"></span>
