--- a/article.html
+++ b/article.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-8 media">
-                    <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg">
+                    <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg" alt="Logo containing text Lorem Ipsum">
                     <div class="media-body align-self-center">
                         <div class="mb-0 title">Lorem Ipsum
                             <br>Institute of Technology
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="navbar navbar-dark bg-dark navbar-expand-lg px-0">
                 <div class="navbar-brand d-lg-none">
-                    <img class="rounded-right" src="./img/logo.jpg" width="40" height="40">
+                    <img class="rounded-right" src="./img/logo.jpg" width="40" height="40" alt="Logo containing text Lorem Ipsum">
                 </div>
                 <button class="navbar-toggler" type="button">
                     <span class="navbar-toggler-icon"></span>
@@ -123,7 +123,7 @@
         <article class="p-5 bg-white">
             <h1 class="text-primary text-center mb-4 title">Global temperature record shows 2016 as the warmest year on record</h1>
             <figure class="text-center wrapper">
-                <img src="./img/temperature.jpg" class="figure-img img-fluid">
+                <img src="./img/temperature.jpg" class="figure-img img-fluid" alt="Chart comparing years from 1880 until 2020 versus Temperature Anomaly (C) showing an upwards trend. Described in the following paragraphs full text and table.">
                 <figcaption class="figure-caption text-center px-5">The graphic shows the global mean surface temperature change since 1880 till nowadays. The grey curve indicates
                     the annual average temperature and the black curve shows the smoothed result. Over the last two centuries,
                     the mean tempurature has increased by around 1 degree Celcius.</figcaption>
