--- a/login.html
+++ b/login.html
@@ -121,7 +121,7 @@
         <div class="row no-gutters">
             <div class="col-12 col-md-5 mt-4 login" aria-labelledby="login" role = "form" >
                 <div class="p-4 mr-md-3 bg-white">
-                    <h1 class="text-primary mb-4 title">Login</h1>
+                    <h1 class="text-primary mb-4 title" id="login">Login</h1>
                     <div class="text-danger mb-4 d-none subtitle" id="login-error" aria-live="polite">Please correct the errors</div>
                     <ul class="sr-only" id="login-error-list" aria-labelledby="login-error"></ul>
                     <form id="login-form" novalidate>
@@ -132,7 +132,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="login-password-control">Password</label>
+                            <label for="login-password-control" id="login-password-input">Password</label>
                             <input class="form-control" id="login-password-control" aria-labelledby="login-password-input" type="password" placeholder="Password" aria-invalid="false" required aria-required="true" aria-errormessage="login-password-error">
                             <small class="invalid-feedback" id="login-password-error">Invalid Password</small>
                         </div>
