Acessibility of images

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
     <header class="container-fluid d-none d-lg-block my-4 header">
         <div class="container">
             <div class="row no-gutters">
-                <div class="col-8 media">
+                <div class="col-8">
+                    <a class="media" href="index.html">
                     <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg" alt="Logo of Lorem Ipsum Institute">
                     <div class="media-body align-self-center">
                         <div   role="heading" class="mb-0 title">Lorem Ipsum
                             <br>Institute of Technology
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="col-4">
                     <div class="btn-toolbar justify-content-end">
