clicking anywhere on the article will redirect

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg" alt="A photo of three robots. The centered robot is looking in the direction of the camera and is waving.">
                         <section role="region" aria-label="Quo plebiscito decreta a senatu est consuli quaestio Cn">
                             <header>
-                                <h2 class="text-info mt-0 mb-2 subtitle" href="./empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</h2>
+                                <a href="./empty.html?title=Article"><h2 class="text-info mt-0 mb-2 subtitle" href="./empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</h2></a>
                             </header>
                             <p>
                                 Comprehensum, quod cognitum non habet? Quia nec honesto quic quam honestius nec turpi turpius. Maximeque eos videre possumus res gestas audire et legere velle, qui a spe gerendi absunt confecti senectute. Est enim effectrix multarum et magnarum voluptatum.
