Repeat Password at registration

--- a/login.html
+++ b/login.html
@@ -163,6 +163,12 @@
 
                             </div>
                             <div class="form-group">
+                                <label for="register-password-control" id="repeat-password">Repeat Password</label>
+                                <input class="form-control" id="repeat-password-control" type="password" placeholder="Password" aria-labelledby="register-password" required aria-required="true" aria-errormessage="error-register-password" aria-invalid="false">
+                                <small class="invalid-feedback" id="error-repeat-password">Please repeat your password</small>
+
+                            </div>
+                            <div class="form-group">
                                 <label for="register-programme-control">Programme</label>
                                 <select class="form-control" id="register-programme-control" required aria-required="true" aria-labelledby="register-select-program" required aria-required="true" aria-errormessage="error-register-program" aria-invalid="false">
                                     <option value="" id="register-select-program">Please select your education or research programme</option>
