--- a/article.html
+++ b/article.html
@@ -94,22 +94,22 @@
         </div>
     </nav>
 
-    <main class="container mt-4 main" id="main">
-        <article class="p-5 bg-white">
-            <h1 class="text-primary text-center mb-4 title">Global temperature record shows 2016 as the warmest year on record</h1>
-            <figure class="text-center wrapper">
+    <main class="container mt-4 main" id="main" role="main">
+        <article class="p-5 bg-white" aria-labelledby="article-title">
+            <h1 class="text-primary text-center mb-4 title" id=”article-title">Global temperature record shows 2016 as the warmest year on record</h1>
+            <figure class="text-center wrapper" role="figure">
                 <img src="./img/temperature.jpg" class="figure-img img-fluid" alt="Chart comparing years from 1880 until 2020 versus Temperature Anomaly (C) showing an upwards trend. Described in the following paragraphs full text and table.">
                 <figcaption class="figure-caption text-center px-5">The graphic shows the global mean surface temperature change since 1880 till nowadays. The grey curve indicates
                     the annual average temperature and the black curve shows the smoothed result. Over the last two centuries,
                     the mean tempurature has increased by around 1 degree Celcius.</figcaption>
                 </figure>
-            <p>The global temperature record shows the fluctuations of the temperature of the atmosphere and the oceans through
+            <p id="caption">The global temperature record shows the fluctuations of the temperature of the atmosphere and the oceans through
                 various spans of time. The recently data published by NASA is one of the most detailed information exists
                 since 1850, when methodical thermometer-based records began.
             </p>
             <p>Sixteen of the 17 warmest years in the 136-year record all have occurred since 2001, with the exception of 1998.
                 The year 2016 ranks as the warmest on record.</p>
-            <div class="table-responsive mt-4 wrapper">
+            <div class="table-responsive mt-4 wrapper"   role="table">
                 <table class="table text-center">
                     <col>
                     <col>
