Font size button from localstorage. increase contrast with smaller menu

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             </div>
             <div class="d-lg-none">
                 <div class="btn-toolbar justify-content-end">
-                    <div class="btn-group btn-group-sm">
-                        <button class="btn btn-dark text-white font-increase-button" id="font-increase-button-1">A+</button>
-                        <button class="btn btn-dark text-white font-decrease-button" id="font-decrease-button-1">A-</button>
+                    <div class="btn-group btn-group-sm mb-2">
+                        <button class="btn btn-light text-dark font-increase-button" id="font-increase-button-1">A+</button>
+                        <button class="btn btn-light text-dark font-decrease-button" id="font-decrease-button-1">A-</button>
                     </div>
                 </div>
             </div>
