Make logo clickable small menu. Increase contrast menu.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         <div class="container">
             <div class="navbar navbar-dark bg-dark navbar-expand-lg px-0">
                 <div class="navbar-brand d-lg-none">
-                    <img class="rounded-right" src="./img/logo.jpg" width="40" height="40"alt="Logo of Lorem Ipsum Institute">
+                    <a class="media" href="index.html">
+                        <img class="rounded-right" src="./img/logo.jpg" width="40" height="40"alt="Logo of Lorem Ipsum Institute">
+                    </a>
                 </div>
                 <button class="navbar-toggler" role="button" type="button">
                     <span class="navbar-toggler-icon"></span>
