Make table readable by voiceover

--- a/article.html
+++ b/article.html
@@ -111,25 +111,23 @@
             </p>
             <p>Sixteen of the 17 warmest years in the 136-year record all have occurred since 2001, with the exception of 1998.
                 The year 2016 ranks as the warmest on record.</p>
-            <div class="table-responsive mt-4 wrapper"   role="table">
-                <table class="table text-center">
-                    <col>
-                    <col>
-                    <colgroup span="2"></colgroup>
-                    <tbody class="thead-dark">
+            <div class="table-responsive mt-4 wrapper" >
+                <table class="table text-center" role="table">
+                    <caption>Comparison of temperature per century</caption>
+                    <thead class="thead-dark">
                         <tr>
                             <th scope="col" class="align-middle" rowspan="2">Century</th>
                             <th scope="col" class="align-middle" rowspan="2">Year</th>
-                            <th colspan="2" scope="col" class="align-middle" colspan="2">Temperature</th>
+                            <th scope="col" class="align-middle" colspan="2">Temperature</th>
                         </tr>
                         <tr>
                             <th scope="col" class="align-middle">Average</th>
                             <th scope="col"  class="align-middle">Smoothed</th>
                         </tr>
-                    </tbody>
-                    <tbody>
+                    </thead>
+                    <tbody class="thead-dark">
                         <tr>
-                            <th scope="row" rowspan="2" class="align-middle" rowspan="2">19th century</th>
+                            <th scope="row" class="align-middle" rowspan="2">19th century</th>
                             <td>1880</td>
                             <td>-0.20</td>
                             <td>-0.13</td>
@@ -139,10 +137,8 @@
                             <td>-0.37</td>
                             <td>-0.26</td>
                         </tr>
-                    </tbody>
-                    <tbody>
                         <tr>
-                            <th scope="row" rowspan="2" class="align-middle" rowspan="2">20th century</th>
+                            <th scope="row" class="align-middle" rowspan="2">20th century</th>
                             <td>1920</td>
                             <td>-0.27</td>
                             <td>-0.26</td>
@@ -152,10 +148,8 @@
                             <td>0.44</td>
                             <td>0.34</td>
                         </tr>
-                    </tbody>
-                    <tbody>
                         <tr>
-                            <th  scope="row" rowspan="2" class="align-middle" rowspan="2">21st century</th>
+                            <th scope="row" class="align-middle" rowspan="2">21st century</th>
                             <td>2000</td>
                             <td>0.42</td>
                             <td>0.52</td>
